--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -8,7 +8,54 @@
         android:layout_height="wrap_content"
         android:text="@string/sample_text2"
         android:id="@+id/textView2"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="80dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/vegTitle"
+        android:id="@+id/vegTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="34dp"
+        android:layout_marginStart="34dp"
+        android:layout_marginTop="45dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/grainsTitle"
+        android:id="@+id/grainsTextView"
+        android:layout_below="@+id/vegTextView"
+        android:layout_alignLeft="@+id/vegTextView"
+        android:layout_alignStart="@+id/vegTextView"
+        android:layout_marginTop="45dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/milkTitle"
+        android:id="@+id/milkTextView"
+        android:layout_marginTop="45dp"
+        android:layout_below="@+id/grainsTextView"
+        android:layout_alignLeft="@+id/grainsTextView"
+        android:layout_alignStart="@+id/grainsTextView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/meatTitle"
+        android:id="@+id/meatTextView"
+        android:layout_below="@+id/milkTextView"
+        android:layout_alignLeft="@+id/milkTextView"
+        android:layout_alignStart="@+id/milkTextView"
+        android:layout_marginTop="45dp" />
 
 </RelativeLayout>
