--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sample_text1"
-        android:id="@+id/textView1"
+        android:id="@+id/diaryDebugTextView"
         android:layout_marginBottom="70dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
@@ -65,8 +65,8 @@
         android:ems="10"
         android:id="@+id/vegEditText"
         android:layout_alignBottom="@+id/vegTextView"
-        android:layout_toRightOf="@+id/textView1"
-        android:layout_toEndOf="@+id/textView1"
+        android:layout_toRightOf="@+id/diaryDebugTextView"
+        android:layout_toEndOf="@+id/diaryDebugTextView"
         android:maxLength="5" />
 
     <EditText
@@ -108,7 +108,7 @@
         android:layout_height="wrap_content"
         android:text="@string/addButtonTitle"
         android:id="@+id/addButton"
-        android:layout_above="@+id/textView1"
+        android:layout_above="@+id/diaryDebugTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="50dp" />
 
