--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sample_text2"
-        android:id="@+id/textView2"
+        android:id="@+id/statsDebugTextView"
         android:layout_marginBottom="80dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
@@ -57,5 +57,95 @@
         android:layout_alignLeft="@+id/milkTextView"
         android:layout_alignStart="@+id/milkTextView"
         android:layout_marginTop="45dp" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/vegProgressBar"
+        android:layout_below="@+id/vegTextView"
+        android:layout_alignLeft="@+id/grainsTextView"
+        android:layout_alignStart="@+id/grainsTextView"
+        android:layout_marginTop="16dp"
+        android:layout_alignRight="@+id/statsDebugTextView"
+        android:layout_alignEnd="@+id/statsDebugTextView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/outOfSix"
+        android:id="@+id/outOfTextView1"
+        android:layout_alignTop="@+id/vegProgressBar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="24dp"
+        android:layout_marginEnd="24dp" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/grainsProgressBar"
+        android:layout_below="@+id/grainsTextView"
+        android:layout_alignLeft="@+id/milkTextView"
+        android:layout_alignStart="@+id/milkTextView"
+        android:layout_marginTop="16dp"
+        android:layout_alignRight="@+id/vegProgressBar"
+        android:layout_alignEnd="@+id/vegProgressBar" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/outOfSix"
+        android:id="@+id/outOfTextView2"
+        android:layout_alignTop="@+id/grainsProgressBar"
+        android:layout_alignLeft="@+id/outOfTextView1"
+        android:layout_alignStart="@+id/outOfTextView1" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/milkProgressBar"
+        android:layout_below="@+id/milkTextView"
+        android:layout_alignLeft="@+id/meatTextView"
+        android:layout_alignStart="@+id/meatTextView"
+        android:layout_marginTop="16dp"
+        android:layout_toLeftOf="@+id/statsDebugTextView"
+        android:layout_toStartOf="@+id/statsDebugTextView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/outOfTwo"
+        android:id="@+id/outOfTextView3"
+        android:layout_alignTop="@+id/milkProgressBar"
+        android:layout_alignLeft="@+id/outOfTextView2"
+        android:layout_alignStart="@+id/outOfTextView2" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/meatProgressBar"
+        android:layout_below="@+id/meatTextView"
+        android:layout_alignLeft="@+id/meatTextView"
+        android:layout_alignStart="@+id/meatTextView"
+        android:layout_marginTop="16dp"
+        android:layout_alignRight="@+id/milkProgressBar"
+        android:layout_alignEnd="@+id/milkProgressBar" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/outOfTwo"
+        android:id="@+id/outOfTextView4"
+        android:layout_alignTop="@+id/meatProgressBar"
+        android:layout_alignLeft="@+id/outOfTextView3"
+        android:layout_alignStart="@+id/outOfTextView3" />
 
 </RelativeLayout>
