--- a/app/src/main/res/layout/fragment_diary.xml
+++ b/app/src/main/res/layout/fragment_diary.xml
@@ -15,6 +15,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Today"
+        android:id="@+id/dateTextView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="18sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/vegTitle"
         android:id="@+id/vegTextView"
@@ -23,7 +33,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginLeft="34dp"
         android:layout_marginStart="34dp"
-        android:layout_marginTop="45dp" />
+        android:layout_marginTop="70dp" />
 
     <TextView
         android:layout_width="wrap_content"
