Added a check and notification if table is empty
Note: There was a glitch in the previous commit, so 3 lines from
NutritionDbHelper.java and an if-else block from StatsFragment.java are
being added now instead.

--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -160,4 +160,12 @@
         android:textSize="18sp"
         android:layout_marginTop="20dp" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/debuggingMessageTextView"
+        android:layout_marginBottom="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
